# simple_cpp_project

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Config.cmake.in  LICENSE  README.md  SimpleCppProjectConfig.cmake.in  build.sh  clean_build.sh  conanfile.py  package.sh  run_docker.sh  run_unit_tests.sh  upload_package.sh
.github/workflows/: simple-cpp-pipeline.yml
app/: CMakeLists.txt  build.sh  run_docker.sh
app/include/: Logger.hpp
app/src/: Logger.cpp  main.cpp
cmake/: UnitTest.cmake
development_docker/: Dockerfile  build_docker.sh  push_docker.sh  requirements.txt  toolchain_catalog.apt-get.packages
development_docker/helper/fixuid/: fixuid-config.yml
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp
tests/: CMakeLists.txt
tests/scenarios/logging/: CMakeLists.txt
tests/scenarios/logging/src/: LoggingTests.cpp
